# DHT22-Library

./: CMakeLists.txt  DHT22.c  DHT22.h  README.md  main.c
